fix: extra space

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
 :root {
   font-family: 'Orbitron Variable', sans-serif;
   line-height: 1.5;
